--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,11 @@
       }
     ],
     "paths": {
-      "@components/*": ["./src/components/*"],
-      "@modules/*": ["./src/modules/*"],
       "@styles/*": ["./src/styles/*"],
-      "@i18n/*": ["./src/i18n/*"]
+      "@features/*": ["./src/features/*"],
+      "@shared/*": ["./src/shared/*"],
+      "@pages/*": ["./src/pages/*"],
+      "@i18n/*": ["./src/shared/i18n/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
